Delet2
#pragma once

#include <rclcpp/rclcpp.hpp>
#include <opencv2/opencv.hpp>
#include <sensor_msgs/msg/image.hpp>
#include <opencv2/tracking.hpp>

class Tracker : public rclcpp::Node {
public:
    Tracker();
    ~Tracker();

    void imageCallback(const sensor_msgs::msg::Image::SharedPtr msg);

private:
    void initializeTracker(cv::Mat& frame);
    bool updateTracker(cv::Mat& frame);

    cv::Ptr<cv::Tracker> tracker_;
    cv::Rect2d tracking_bbox_;
    bool is_initialized_;
    rclcpp::Subscription<sensor_msgs::msg::Image>::SharedPtr image_sub_;
    rclcpp::Publisher<sensor_msgs::msg::Image>::SharedPtr visualization_pub_;
};






colcon build --packages-select tutorial_pkg
Starting >>> tutorial_pkg
[Processing: tutorial_pkg]                             
[Processing: tutorial_pkg]                                     
--- stderr: tutorial_pkg                                       
/home/husarion/augmented-robots/robots/husarion_ws/src/tutorial_pkg/src/my_first_node.cpp: In member function ‘void MyNode::counter_callback(std_srvs::srv::Trigger_Request_<std::allocator<void> >::SharedPtr, std_srvs::srv::Trigger_Response_<std::allocator<void> >::SharedPtr)’:
/home/husarion/augmented-robots/robots/husarion_ws/src/tutorial_pkg/src/my_first_node.cpp:61:54: warning: unused parameter ‘req’ [-Wunused-parameter]
   61 |     const std_srvs::srv::Trigger::Request::SharedPtr req,
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~
/home/husarion/augmented-robots/robots/husarion_ws/src/tutorial_pkg/src/tracker.cpp: In member function ‘void Tracker::_imageCallback(sensor_msgs::msg::Image_<std::allocator<void> >::SharedPtr)’:
/home/husarion/augmented-robots/robots/husarion_ws/src/tutorial_pkg/src/tracker.cpp:32:37: error: cannot convert ‘cv::Rect’ {aka ‘cv::Rect_<int>’} to ‘cv::Rect2d&’ {aka ‘cv::Rect_<double>&’}
   32 |   bool ok = _tracker->update(frame, obj);
      |                                     ^~~
      |                                     |
      |                                     cv::Rect {aka cv::Rect_<int>}
In file included from /usr/include/opencv4/opencv2/tracking.hpp:281,
                 from /home/husarion/augmented-robots/robots/husarion_ws/src/tutorial_pkg/include/tutorial_pkg/tracker.hpp:6,
                 from /home/husarion/augmented-robots/robots/husarion_ws/src/tutorial_pkg/src/tracker.cpp:1:
/usr/include/opencv4/opencv2/tracking/tracker.hpp:547:57: note:   initializing argument 2 of ‘bool cv::Tracker::update(cv::InputArray, cv::Rect2d&)’
  547 |   CV_WRAP bool update( InputArray image, CV_OUT Rect2d& boundingBox );
      |                                                 ~~~~~~~~^~~~~~~~~~~
make[2]: *** [CMakeFiles/tracker.dir/build.make:63: CMakeFiles/tracker.dir/src/tracker.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:111: CMakeFiles/tracker.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
make: *** [Makefile:141: all] Error 2
---
Failed   <<< tutorial_pkg [1min 5s, exited with code 2]

Summary: 0 packages finished [1min 7s]
  1 package failed: tutorial_pkg
  1 package had stderr output: tutorial_pkg
husarion@husarion:~/augmented-robots/robots
